--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/reference/order/popup/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/reference/order/popup/list.html
@@ -151,7 +151,10 @@ $(function(){
 
 		try
 		{
-			opener.setSelectedItems(selectedItems);	
+			if (selectedItems.length > 0)
+			{
+				opener.setSelectedItems(selectedItems);	
+			};
 		}
 		catch (e) {}
 	});
