--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/write.html
@@ -75,7 +75,6 @@
 	<div class="grid-info">
 		<div class="grid-total">
 			<button id="BTN_add" type="button">[[#{HQP_B_ADD}]]</button>
-			<div class="split"></div>
 			<button id="BTN_delete" type="button">[[#{HQP_B_DELETE}]]</button>
 		</div>
 	</div>
@@ -195,7 +194,7 @@ $(function(){
 	});		
 	
 	$("#BTN_add").on("click", function(){
-		Popup.open("[[${BASE_PATH}]]/claim/create/reference/order/popup/list", 1100, 600); 
+		Popup.open("[[${BASE_PATH}]]/claim/create/reference/order/popup/list", 1200, 600); 
 	});
 	
 	$("#BTN_delete").on("click", function(){
@@ -343,14 +342,21 @@ function setSelectedItems(rows)
 	let splitRow = "<div class='split-row-compact'></div>";
 	
 	$.each(rows, function(index, element) {
-		let template = $("#AREA_template").clone();
-		
+		let orderNo = element.VBELN;
+		let lineNo = element.POSNR;
 		let id = element.VBELN + "_" + element.POSNR;
+		
+		if (JpUtilsObject.isNotNull($("#" + id)))
+		{
+			return true;			
+		};
+		
+		let template = $("#AREA_template").clone();
 		
 		$(template).find("table").attr("id", id).removeClass("template");
 		
-		$(template).find("[data-key=order-no]").text(element.VBELN);
-		$(template).find("[data-key=line-item]").text(element.POSNR);
+		$(template).find("[data-key=order-no]").text(orderNo);
+		$(template).find("[data-key=line-item]").text(lineNo);
 		$(template).find("[data-key=order-part-no]").text(element.MATNR);
 		$(template).find("[data-key=description]").text(element.MAKTX);
 		$(template).find("[data-key=order-qty]").text(element.KWMENG);
@@ -359,8 +365,8 @@ function setSelectedItems(rows)
 		$(template).find("[data-key=net-price]").text(element.NETPR);
 		$(template).find("[data-key=net-value]").text(element.T_NETWR);
 		$(template).find("[data-key=order-date]").text(element.ERDAT);
-		$(template).find("input[name=orderNo]").val(element.VBELN);
-		$(template).find("input[name=lineNo]").val(element.POSNR);
+		$(template).find("input[name=orderNo]").val(orderNo);
+		$(template).find("input[name=lineNo]").val(lineNo);
 		$(template).find("input[name=partNo]").val(element.MATNR);
 		$(template).find("input[name=orderDate]").val(element.ERDAT);
 		
