--- a/src/main/resources/templates/portal/iv/hq/parts/export/claim/display/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/claim/display/list.html
@@ -22,7 +22,7 @@
 				<th th:text="#{HQP_L_COMPLAINT_NO}"></th><!-- Complaint No. -->
 				<td> 
 					<div class="input-area">
-						<input type="text" id="pComplaintNo" name="pComplaintNo" class="custom-ui" th:value="${pComplaintNo}">
+						<input type="text" id="pClaimNo" name="pClaimNo" class="custom-ui" th:value="${pClaimNo}">
 					</div>							
 				</td>
 				<th th:text="#{HQP_L_REFERENCE_NO}"></th><!--Reference No.  -->
@@ -97,12 +97,12 @@ $(function(){
 			{targets: [0, 4], className: "link dt-body-center"},
 			{targets: [1, 3, 6, 9], className: "dt-body-center"},
 			{targets: [5], className: "dt-body-right"}
-		],		
+		],
 		ajax: {
-			url: "[[${BASE_PATH}]]/claim/list/data",
+			url: "[[${BASE_PATH}]]/claim/display/list/data",
 			data: function(p)
 			{
-				p.pComplaintNo 	= $("#pComplaintNo").val();
+				p.pClaimNo 	= $("#pClaimNo").val();
 				p.pReferenceNo	= $("#pReferenceNo").val();
 				p.pPartNo 		= $("#pPartNo").val();
 				p.pFromDate 	= $("#pFromDate").val();
@@ -172,7 +172,7 @@ $(function(){
 				$("#orderNo").val(orderNo);			
 				$("#docDate").val(rowData.ERDAT);
 				$("#docType").val("A");
-				$("#FORM_search").attr("action", "[[${BASE_PATH}]]/claim/view").submit();
+				$("#FORM_search").attr("action", "[[${BASE_PATH}]]/claim/display/view").submit();
 			}
 		}
 		else if (index == 4)
