--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/css.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/css.html
@@ -8,3 +8,4 @@
 <link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/basic.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/gnb.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/portal/js/datatables/datatables.custom.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/jquery.bxslider.css}">
