--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
@@ -1,5 +1,4 @@
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fileDownload/1.4.2/jquery.fileDownload.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
@@ -29,4 +28,5 @@
 <script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
 <script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
 <script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
+<script th:src="@{/portal/js/jquery.bxslider.js}"></script>
 <script th:src="@{/portal/js/portal.utils.download.js}"></script>
