--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/gnb.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/gnb.css
@@ -23,9 +23,10 @@
 	border-radius: 5px;
 	background: rgba(0, 48, 130, 0.8);
 	position: relative;
-	z-index: 9999;
+	/*z-index: 9999;*/
 }
 .gnb-menu-list {
+	/*
 	overflow-y: hidden;
 	white-space: nowrap;
 	line-height: 50px;
@@ -33,20 +34,24 @@
 	margin: 0;
 	padding: 0;
 	display: inline-block;
-	background-color : #003082;
+	background-color : #003082;*/
 }
 
 .gnb-menu-list li{
-	width: 11%;
+	/*width: 11%;
 	color: #fff;
 	font-size: 16px;
 	font-weight: bold;
 	display: inline-table;
-	cursor: pointer;	
+	cursor: pointer;	*/
 }
 .gnb-menu-list li:hover{
+	/*background: #7887b1;*/
+}
+.gnb-menu-list2 li:hover{
 	background: #7887b1;
 }
+
 .mainmenu-arrowbutton {
 	width:32px;
 	height:32px;
