--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
@@ -20,7 +20,7 @@
 <div class="gnb-wrap">
 	<div class="gnb-container">
 		<div class="gnb-menu-area">
-			<ul class="gnb-menu-list" style="display:none;"></ul>					
+			<ul class="gnb-menu-list2" style="display:none;"></ul>					
 			<ul class="gnb-menu-sub-list"></ul>
 		</div>
 	</div>
