--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write2.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write2.html
@@ -115,7 +115,6 @@
 								<div class="input-area">
 									<input type="radio" class="custom-ui" id="docType1" name="docType" value="C" checked />
 									<label th:text="#{HQP_L_ORDER}"></label>
-									&nbsp;&nbsp;
 									<input type="radio" class="custom-ui" id="docType2" name="docType" value="A" />
 									<label th:text="#{HQP_L_INQUIRY}"></label>
 								</div>
@@ -199,19 +198,14 @@
 				<div class="split-row-compact"></div>
 				<div class="block-button-area">
 					<button id="BTN_simulation" type="button">[[#{HQP_B_SIMULATION}]]</button>
-					<div class="split"></div>
 					<button id="BTN_upload" type="button">[[#{HQP_B_UPLOAD}]]</button>
-					<div class="split"></div>
 					<button id="BTN_priceInfo" type="button">[[#{HQP_B_PRICE_INFO}]]</button>
-					<div class="split"></div>
 					<button id="BTN_errorReport" type="button">[[#{HQP_B_ERROR_REPORT}]]</button>			
 				</div>
 				<div class="split-row-compact"></div>
 				<div class="block-button-area">
 					<button id="BTN_addRow" type="button">[[#{HQP_B_ADD}]]</button>
-					<div class="split"></div>
 					<button id="BTN_deleteRow" type="button">[[#{HQP_B_DELETE}]]</button>
-					<div class="split"></div>
 					<button id="BTN_download" type="button">[[#{HQP_B_DOWNLOAD}]]</button>
 				</div>				
 			</div>
@@ -241,7 +235,7 @@
 		
 		$(".dropzone-dimmer").css({
 			"width": "100%",
-			"height": $(document).height()
+			"height": "100%"
 		});
 	
 		$(".dropzone-dimmer, .dropzone-area").show();
