--- a/src/main/resources/templates/portal/iv/hq/parts/export/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/main.html
@@ -82,8 +82,8 @@
 									<table class="bulletin-1">
 									<th:block th:if="${#lists.isEmpty(bbs1)}">
 										<tr>
-											<td rowspan="4" class="bbs-name"><div class="bulletin-title-text" th:text="${bbs1Name}"></div><img src="/portal/img/icon/more.png" onclick="goToBoard(1);" style="cursor: pointer; margin-top: 20px;"/></td>
-											<td class="bbs-title">&nbsp;</td>
+											<td rowspan="4" class="bbs-name"><div class="bulletin-title-text" th:text="${bbs1Name}" th:title="${bbs1Name}"></div><img src="/portal/img/icon/more.png" onclick="goToBoard(1);" style="cursor: pointer; margin-top: 20px;"/></td>
+											<td class="bbs-title">・[[#{HQP_T_EMPTY_RESULT}]]</td>
 											<td class="bbs-date">&nbsp;</td>
 										</tr>
 										<tr th:each="i: ${#numbers.sequence(1, 3)}">
@@ -93,7 +93,7 @@
 									</th:block>
 									<th:block th:unless="${#lists.isEmpty(bbs1)}">
 										<tr th:each="content, i: ${bbs1}">
-											<td rowspan="4" class="bbs-name" th:if="${i.index == 0}"><div class="bulletin-title-text" th:text="${bbs1Name}"></div><img src="/portal/img/icon/more.png" onclick="goToBoard(1);" style="cursor: pointer; margin-top: 20px;"/></td>
+											<td rowspan="4" class="bbs-name" th:if="${i.index == 0}"><div class="bulletin-title-text" th:text="${bbs1Name}" th:title="${bbs1Name}"></div><img src="/portal/img/icon/more.png" onclick="goToBoard(1);" style="cursor: pointer; margin-top: 20px;"/></td>
 											<td class="bbs-title">・<a class="link" th:data-key="${content.bcSeq}" th:bSeq="${content.board.bSeq}">[[${content.title}]]</a></td>
 											<td class="bbs-date" th:text="${content.displayRegDate2}"></td>												
 										</tr>
@@ -107,8 +107,8 @@
 									<table class="bulletin-2">
 									<th:block th:if="${#lists.isEmpty(bbs2)}">
 										<tr>
-											<td rowspan="4" class="bbs-name"><div class="bulletin-title-text" th:text="${bbs2Name}"></div><img src="/portal/img/icon/more.png" onclick="goToBoard(2);" style="cursor: pointer; margin-top: 20px;"/></td>
-											<td class="bbs-title">&nbsp;</td>
+											<td rowspan="4" class="bbs-name"><div class="bulletin-title-text" th:text="${bbs2Name}" th:title="${bbs2Name}"></div><img src="/portal/img/icon/more.png" onclick="goToBoard(2);" style="cursor: pointer; margin-top: 20px;"/></td>
+											<td class="bbs-title">・[[#{HQP_T_EMPTY_RESULT}]]</td>
 											<td class="bbs-date">&nbsp;</td>
 										</tr>
 										<tr th:each="i: ${#numbers.sequence(1, 3)}">
@@ -118,7 +118,7 @@
 									</th:block>
 									<th:block th:unless="${#lists.isEmpty(bbs2)}">
 										<tr th:each="content, i: ${bbs2}">
-											<td rowspan="4" class="bbs-name" th:if="${i.index == 0}"><div class="bulletin-title-text" th:text="${bbs2Name}"></div><img src="/portal/img/icon/more.png" onclick="goToBoard(2);" style="cursor: pointer; margin-top: 20px;"/></td>
+											<td rowspan="4" class="bbs-name" th:if="${i.index == 0}"><div class="bulletin-title-text" th:text="${bbs2Name}" th:title="${bbs2Name}"></div><img src="/portal/img/icon/more.png" onclick="goToBoard(2);" style="cursor: pointer; margin-top: 20px;"/></td>
 											<td class="bbs-title">・<a class="link" th:data-key="${content.bcSeq}" th:bSeq="${content.board.bSeq}">[[${content.title}]]</a></td>
 											<td class="bbs-date" th:text="${content.displayRegDate2}"></td>												
 										</tr>
